refactored LevelParent
- removed unused imports
- resolved potential pullpointerexception
- replaced lambda with method reference in updateActors
- used lambda in intitilizeBackGround
- used method reference instead of lambda and used tolist instead of collect tolist  in removeDestroyedActors
- used tolist insetasd of collect tolsit in removeOutOfScreenProjectiles